Fixed the login form, auth confirmation and error pages.
